[package]
name = "RustyDO"
version = "0.1.0"
edition = "2021"
authors = ["Jung Hyun Kim <jidoc01@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jidoc01/RustyDO"

[dependencies]
#evenio = { version = "0.3.0", features = ["rayon"] }
evenio = { path = "./evenio", features = ["rayon"] }
tokio = { version = "1.36.0", features = ["full"] }
polodb_core = "4.4.0"
serde = "1.0.196"
pwhash = "1"
anyhow = "1.0.79"
bytes = "1.5.0"
byteorder = "1.5.0"
encoding = "0.2.33"
lazy_static = "1.4.0"
ignore-result = "0.2.0"
ctrlc = "3.4.2"
rayon = "1.9.0"
tracing-subscriber = "0.3.18"
log = "0.4.21"
